--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,15 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ES2020", "DOM"],
-    "typeRoots": ["./src", "./node_modules/@types"]
+    "typeRoots": ["./src", "./node_modules/@types"],
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
