--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "fs-extra": "11.2.0",
     "glob": "10.4.2",
-    "marked": "11.1.1"
+    "marked": "11.1.1",
+    "typescript": "5.9.3"
   }
 }
