--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "11.2.0",
     "glob": "10.4.2",
     "marked": "11.1.1",
+    "marked-footnote": "^1.4.0",
     "typescript": "5.9.3"
   }
 }
