--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "fs-extra": "11.2.0",
     "glob": "10.4.2",
+    "katex": "^0.16.28",
     "marked": "11.1.1",
     "marked-footnote": "^1.4.0",
+    "marked-katex-extension": "^5.1.6",
     "typescript": "5.9.3"
   }
 }
